# PythonUNN

./: README.md
homeworks/Stepa123de/hw1/: hw1.py
homeworks/Stepa123de/hw2/: hw2.py
homeworks/Stepa123de/hw5/todo/: basic.py  json_parsing.py  read_csv_file.py  writer_xml.py
homeworks/Stepa123de/hw6/: setup.cfg
practice/pr3/: pyproject.toml  setup.cfg
practice/pr3/hw4/todo/: __main__.py  commands.py  runtime.py  storage.py
practice/pr3/hw5/my-awesome-scipt/: pyproject.toml
practice/pr4/: pyproject.toml
practice/pr4/myscrapy/myscrapy/: items.py  settings.py
practice/pr4/myscrapy/myscrapy/spiders/: BlogSpider.py  NamesBlogSpider.py  blogcounter.py  parsBlog.py
practice/pr5/: pyproject.toml
practice/pr5/todo/: main.py
practice/pr6/: pyproject.toml
practice/pr6/todo/: __main__.py
