[tool.poetry]
name = "pr5"
version = "0.1.0"
description = ""
authors = ["Luigi_Capello <Stepa.kashin.2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
memory-profiler = "^0.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
